Fix broken layout of export modal window and date picker display
Jira: WLP-822

--- a/public/scss/components/_date-range-picker.scss
+++ b/public/scss/components/_date-range-picker.scss
@@ -1,3 +1,11 @@
+.datepicker__tether-element {
+  // fix layout display among the incapability of react-datepicker and react-modal plugins
+  z-index: 300;
+
+  // position fix for the native tether element class offset
+  margin-top: -15px;
+}
+
 .date-range-picker,
 .date-picker-button {
   @include button-control;
